  * rename the service class GENOMA to RemoteAlignmentServices
  * add the possibility to delete a task in remote alignment services
  * remove checks for local projects in the dataset discovery procedure
  * add the possibility to customize the treshold in bytes on the data to be profiled during a preload
  * index preloaded data for fulltext search
  * fix NullPointerException in OntologyManager triggered by an attempt to fetch RDF data from an URL that does
    not return a Content-Type
  * fixed several bugs in the search regarding the use of special characters
  * enabled support for multiple administators
  
version 6.0
date: 27/06/2019
  * Enabled multiple dataDumps in dataset catalogs
  * Added support for archives containing RDF data to preloading and loadData
  * Integrated support for connecting to a matching system, specifically GENOMA (the connection protocol is meant to be general, though)
  * Added a Dataset Catalog connector for the European Union Open Data Portal (ODP) (https://data.europa.eu/euodp/)
  * Added services for creating Lucene indexes for the resources in the projects and for searching over these indexes (Global Search)
  * Added support for blacklisting, integrated with the validation machinery
  * Extended the MAPLE service to generate reports on alignment scenarios, supporting decisions and strategies for alignment
  * Removed the redundant indication of the role of predicates in the Resource View
  * Added the possibility to specify a template for enriching the output of predefined rendering engines
    (e.g. to include a skos:notation)
  * Added support for Graph View in VocBench.
  * Fixed exception about missing configuration when exporting the results of a SPARQL graph query after the
    application of some RDFTransformers
  * Added server-side computation of the nature of the triples in the ResourceView
  * Fixed some compatibility issues with Java 11