@@ -7,6 +7,9 @@ date: dd/mm/yyy
   * remove checks for local projects in the dataset discovery procedure
   * add the possibility to customize the treshold in bytes on the data to be profiled during a preload
   * index preloaded data for fulltext search
+  * change the communication protocol with the change tracker sail to validate commits (as a workaround for an
+    issue with invalid IRIs that can be generated by the validation subsystem)
+  * backward incompatible changes in some APIs related to RDFLifter 
   * fix NullPointerException in OntologyManager triggered by an attempt to fetch RDF data from an URL that does
     not return a Content-Type
   * fixed several bugs in the search regarding the use of special characters
